# quasi-params

./: .travis.yml  Makefile  cabal.project
.github/workflows/: test.yaml
nix/: default.nix  release.nix
nix/modules/: release.nix
nix/plans/ghc8101/: plan-hash.txt
nix/plans/ghc8101/plan/: default.nix
nix/plans/ghc8102/: plan-hash.txt
nix/plans/ghc8102/plan/: default.nix
nix/plans/ghc865/: plan-hash.txt
nix/plans/ghc865/plan/: default.nix
nix/plans/ghc884/: plan-hash.txt
nix/plans/ghc884/plan/: default.nix
nix/plans/ghc884/plan/.plan.nix/: quasi-params-multi.nix  quasi-params.nix
nix/source/: haskell-nix.nix  maybevoid.nix  nixpkgs.nix  quasi-params.nix
quasi-params/: quasi-params.cabal
quasi-params-multi/: CHANGELOG.md  quasi-params-multi.cabal
quasi-params-multi/src/item/Data/QuasiParam/Item/: Sig.hs
quasi-params-multi/src/item/Test/QuasiParam/Item/: Sig.hs
quasi-params-multi/src/lib/Data/QuasiParam/MultiParam/: Module.hs  Sig.hsig
quasi-params-multi/src/lib/QuasiParam/MultiParam/: Module.hs  Sig.hsig
quasi-params-multi/src/test/Test/QuasiParam/: Item.hs  Main.hs
quasi-params-multi/src/test/Test/QuasiParam/Item/: Internal.hs
quasi-params/src/lib/: QuasiParam.hs  QuasiParams.hs
quasi-params/src/lib/Data/: QuasiParam.hs
quasi-params/src/lib/Data/QuasiParam/: Dict.hs  Internal.hs  Label.hs  Multi.hs  Name.hs  Tag.hs
quasi-params/src/lib/Data/QuasiParam/Injective/: Internal.hs  Label.hs  Name.hs  Tag.hs
quasi-params/src/lib/Data/QuasiParam/Internal/: Label.hs  Name.hs
quasi-params/src/lib/Data/QuasiParam/Multi/: Cast.hs  Entail.hs  Param.hs
quasi-params/src/lib/QuasiParam/: Dict.hs  Internal.hs  Label.hs  Multi.hs  Name.hs  Tag.hs
quasi-params/src/lib/QuasiParam/Injective/: Internal.hs  Label.hs  Name.hs  Tag.hs
quasi-params/src/lib/QuasiParam/Multi/: Cast.hs  Entail.hs  Param.hs
quasi-params/src/lib/QuasiParams/: ArgKind.hsig  CastParams.hs  HasParam.hs  MultiParam.hs  Params.hs
quasi-params/src/test/: Main.hs
quasi-params/src/test/QuasiParam/Test/: Main.hs
quasi-params/src/test/Test/QuasiParam/: Basic.hs  Main.hs  Multi.hs  Overlap.hs  Stress.hs
quasi-params/src/test/Test/QuasiParam/Basic/: Name.hs
quasi-params/src/test/Test/QuasiParam/Multi/: Bifunctor.hs  Entry.hs  Item.hs  Pair.hs
quasi-params/src/test/Test/QuasiParam/Multi/Internal/: Bifunctor.hs  Entry.hs  Item.hs  Pair.hs
