cabal-version: 3.0

name:                quasi-params-multi
version:             0.1.0.0
synopsis:            Labelled Parameters as Constraints
category:            Data
stability:           experimental
homepage:            https://github.com/maybevoid/quasi-params
bug-reports:         https://github.com/maybevoid/quasi-params/issues
license-file:        LICENSE
author:              Soares Chen
maintainer:          soares.chen@maybevoid.com
copyright:           Copyright (C) Soares Ruofei Chen
license:             BSD-3-Clause
build-type:          Simple
extra-source-files:  CHANGELOG.md

common deps
  ghc-options: -Wall -O2
  default-language: Haskell2010

  build-depends:
      base
    , ghc-prim
    , quasi-params

  default-extensions:
    GADTs
    Strict
    DataKinds
    RankNTypes
    StrictData
    TypeFamilies
    InstanceSigs
    TypeOperators
    ExplicitForAll
    KindSignatures
    ConstraintKinds
    PatternSynonyms
    RoleAnnotations
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    ScopedTypeVariables
    UndecidableInstances
    QuantifiedConstraints
    MultiParamTypeClasses
    FunctionalDependencies
    TypeFamilyDependencies

library
  import: deps

  exposed-modules:
    Data.QuasiParam.MultiParam.Module

  signatures:
    Data.QuasiParam.MultiParam.Sig

  hs-source-dirs:
      src/lib

library quasi-params-multi-test-item
  import: deps

  exposed-modules:
    Data.QuasiParam.Item.Sig

  hs-source-dirs:
      src/item

test-suite quasi-params-multi-test
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      src/test

  other-modules:
    Test.QuasiParam.Main
    Test.QuasiParam.Item
    Test.QuasiParam.Item.Internal

  build-depends:
      quasi-params
    , quasi-params-multi
    , quasi-params-multi-test-item
    , tasty
    , tasty-hunit

  mixins:
    quasi-params-multi
      ( Data.QuasiParam.MultiParam.Module
        as Data.QuasiParam.Item
      )
      requires
        ( Data.QuasiParam.MultiParam.Sig
          as Data.QuasiParam.Item.Sig
        )
