cabal-version: 2.4

name:                quasi-params
version:             0.1.0.0
synopsis:            Labelled Parameters as Constraints
category:            Data
stability:           experimental
homepage:            https://github.com/maybevoid/quasi-params
bug-reports:         https://github.com/maybevoid/quasi-params/issues
license-file:        LICENSE
author:              Soares Chen
maintainer:          soares.chen@maybevoid.com
copyright:           Copyright (C) Soares Ruofei Chen
license:             BSD-3-Clause
build-type:          Simple
extra-source-files:  CHANGELOG.md

common deps
  ghc-options: -Wall -O2
  default-language: Haskell2010

  build-depends:
      base
    , ghc-prim

  default-extensions:
    GADTs
    Strict
    DataKinds
    RankNTypes
    StrictData
    TypeFamilies
    InstanceSigs
    TypeOperators
    ExplicitForAll
    KindSignatures
    ConstraintKinds
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    ScopedTypeVariables
    MultiParamTypeClasses

library
  import: deps

  exposed-modules:
      Data.QuasiParam
      Data.QuasiParam.Label
      Data.QuasiParam.Tag
      Data.QuasiParam.Name

  other-modules:
    Data.QuasiParam.Internal.Label
    Data.QuasiParam.Internal.Name

  hs-source-dirs:
      src/lib

test-suite quasi-params-test
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      src/test

  other-modules:
    Test.QuasiParam.Main
    Test.QuasiParam.Basic
    Test.QuasiParam.Basic.Name
    Test.QuasiParam.Overlap
    Test.QuasiParam.Stress

  build-depends:
      quasi-params
    , tasty
    , tasty-hunit
