cabal-version: 2.4

name:                quasi-params
version:             0.1.0.0
synopsis:            Labeled Parameters as Constraints
category:            Data
stability:           experimental
homepage:            https://github.com/maybevoid/quasi-params
bug-reports:         https://github.com/maybevoid/quasi-params/issues
license-file:        LICENSE
author:              Soares Chen
maintainer:          soares.chen@maybevoid.com
copyright:           Copyright (C) Soares Ruofei Chen
license:             BSD-3-Clause
build-type:          Simple
extra-source-files:  CHANGELOG.md

common deps
  ghc-options: -Wall -O2
  default-language: Haskell2010

  build-depends:
      base
    , mtl
    , ghc-prim

  default-extensions:
    GADTs
    Strict
    DataKinds
    RankNTypes
    StrictData
    StarIsType
    TypeFamilies
    InstanceSigs
    TypeOperators
    ExplicitForAll
    KindSignatures
    ConstraintKinds
    PatternSynonyms
    RoleAnnotations
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    ScopedTypeVariables
    UndecidableInstances
    QuantifiedConstraints
    MultiParamTypeClasses
    FunctionalDependencies
    TypeFamilyDependencies

library
  import: deps

  signatures:
    QuasiParams.ArgKind

  exposed-modules:
    QuasiParams

  other-modules:
    QuasiParams.Params
    QuasiParams.HasParam
    QuasiParams.CastParams
    QuasiParams.MultiParam

  hs-source-dirs:
      src/lib

test-suite quasi-params-test
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      src/test

  other-modules:

  build-depends:
      tasty
    , tasty-hunit
